# recruitment-2023-spring

./: .gitignore  CMakeLists.txt  README.md
data-generation/: create_matrix.py  dump.py  generate.py  read.py
etc/: tests-local.cmake  tests.cmake
include/: Matrices.hh  SpMM.hh
src/: Matrices.cc  SpMM_base.cc  SpMM_opt.cc
tests/: CMakeLists.txt  SpMM_test.cc
